<resources>
    <string name="app_name">ȘtiuMate</string>
    <string name="invata">Învață</string>
    <string name="ghid">Ghid</string>
    <string name="pagautentificare">Pagina de autentificare</string>
    <string name="parolauitata">Parolă uitată?</string>
    <string name="autentificare">Autentificare</string>
    <string name="înregistrare">Înregistrați-vă</string>
    <string name="teorie">Teorie</string>
    <string name="exerseaza">Exersează</string>
    <string name="paginaschimbareparola">Pagină schimbare parolă</string>
    <string name="resetareparola">Resetează parola</string>
    <string name="inapoi">Înapoi la autentificare</string>
    <string name="numeLectie">Nume lecție</string>
    <string name="intrebare">Întrebare</string>
    <string name="trimiteRaspuns">Trimite răspuns</string>
    <string name="imagine">Imagine</string>
    <string name="introduceti_titlul">Introduceți titlul aici</string>
    <string name="imagine_indisponibila">Imagine indisponibilă</string>
    <string name="cerinta">Cerința generală a testului</string>
    <string name="scrie_teorie">Scrieți o scurtă teorie</string>
    <string name="inapoilalogin">Înapoi la login</string>
    <string name="inapoilaAutentificare">Înapoi la autentificare</string>
    <string name="sterge_lectia">Șterge lecția</string>
    <string name="adauga_lectia">Adaugă lecția</string>
    <string name="alegeti_lectie">Alegeți o lecție din meniu și apăsați butonul dorit</string>
    <string name="meniu_intrebari">Meniu întrebări</string>
    <string name="publica_lectia">Publică lecția</string>
    <string name="indiciu1">Indiciu 1</string>
    <string name="indiciu2">Indiciu 2</string>
    <string name="raspuns">Răspuns</string>
    <string name="adauga">Adaugă</string>
    <string name="modifica">Modifică</string>
    <string name="sterge">Șterge</string>
    <string name="goleste">Golește</string>
    <string name="lectii_existente">Lecții existente</string>
    <string name="lectie1">Prin apăsarea butonului, veți scoate temporar lecția \'</string>
    <string name="lectie2">\' din aplicație pentru a avea acces la editarea ei.</string>
    <string name="selectati">Selectați lecția dorită pentru a-i da acces la modificări</string>
    <string name="confirma">Confirmă</string>
    <string name="scor">Scorul tau: </string>
    <string name="raspuns_corect">Răspunsul este corect!</string>
    <string name="raspuns_gresit">Nu ai nimerit răspunsul!\nIndiciu: </string>
    <string name="era_corect">Răspunsul corect era:</string>
    <string name="email">Email</string>
    <string name="inregistrare">Înregistrare</string>
    <string name="parola">Parolă</string>
    <string name="scorul_dvs">Scorul dumneavoastră: </string>
    <string name="inapoi_lectii">Înapoi la lecții</string>
    <string name="bun_venit">Bine ați venit, domnule profesor!</string>
    <string name="parola_primita">Introduceți parola primită de la dezvoltatorii aplicației pentru a putea accesa pagina următoare.</string>
    <string name="parola_noua">Parolă nouă</string>
    <string name="nume_utilizator_nou">Nume utilizator nou</string>
    <string name="email_nou">Email nou</string>
    <string name="sterge_cont">Șterge contul</string>
    <string name="schimba_parola">Schimbă parola</string>
    <string name="schimba_email">Schimbă email-ul</string>
    <string name="schimba_nume">Schimbă numele</string>
    <string name="trimite">Trimite</string>
    <string name="introdu_parere">Introduceți aici părerea dumneavoastră</string>
    <string name="introdu_raspuns">Introduceți aici răspunsul</string>
    <string name="urmatoarea">Următoarea întrebare</string>
    <string name="nume_utilizator">Nume utilizator</string>
    <string name="modifica_lectie">Modifică lecția</string>
    <string name="goleste_campuri">Golește câmpuri</string>
    <string name="alege_poza">Alegeți o poză reprezentativă pentru lecție:</string>
    <string name="pagina_principala">Pagina principală</string>
    <string name="adauga_lectie">Adaugă lecție</string>
    <string name="adauga_modifica">Adăugați lecție sau modificați o lecție existentă</string>
    <string name="medalie">Medalie</string>
    <string name="lista_realizari">Lista realizărilor obținute:</string>
    <string name="nume_profil">Nume:</string>
    <string name="email_profil">E-mail:</string>
    <string name="scor_profil">Scor:</string>
    <string name="nr_medalii">Ați obținut %d noi medalii:</string>
    <string name="o_medalie">Ați obținut o nouă medalie:</string>
    <string name="felicitari">Felicitări!</string>
    <string name="vezi_medalii">Vizitați-vă profilul pentru mai multe detalii.</string>
    <string name="greseli">/ 3</string>
    <string name="mesajb">Bine ați venit în aplicația noastră! Aici găsiți instrucțiuni pentru utilizarea aplicației.</string>
    <string name="instructiune1">1. Pentru a vă înregistra, apăsați butonul \'Autentificare\' de pe pagina principală și dați click pe \'Inregistrați-vă\'.</string>
    <string name="instructiune2">2. Pentru a vă autentifica, apăsați butonul \'Autentificare\' de pe pagina principală, care vă va conduce la pagina voastră de utilizator, unde veți putea vizualiza scorurile, medaliile.</string>
    <string name="instructiune3">3. Pentru a accesa o lecție, apăsați butonul\'Învață\' din pagina principală, apoi dați click pe lecția pe care doriți să o urmați.</string>
    <string name="instructiune4">4. Pentru a vă stabiliza cunoștințele, la șfârșitul fiecărei lecții aveți un buton cu textul \'Exersează\'.</string>
    <string name="instructiune5">5. După ce efectuați testul de la o lecție, veți vedea ce scor ați obținut, precum și scorurile celorlalți utilizatori.</string>
    <string name="instructiune6">6. Evaluarea cunoștințelor constă în întrebări cu privire la acel capitol. Maximul pe care puteți să-l obțineți la o întrebare este 3 puncte. Dacă nu veți răspunde corect din prima încercare, veți primi indicii(maxim 3), dar la fiecare indiciu scorul întrebării va scădea cu un punct(de exemplu: ați răspuns corect - 3 puncte, vi se oferă un indiciu și veți răspunde corect - 2 puncte și așa mai departe). </string>
    <string name="instructiune7">7. După fiecare test de la o lecție, în funcție de scorul obținut veți putea obține medalii, pe care le puteți vizualiza în pagina vostră de profil.</string>
    <string name="revenire_pag_principala">Pagina principală</string>
    <string name="lectii">Lecții</string>
    <string name="setari">Setări cont</string>
    <string name="iesi">Ieși din cont</string>
    <string name="feedback">Feedback</string>
    <string name="top_scoruri">Top Scoruri</string>
    <string name="profil_utilizator">Profil utilizator</string>
    <string name="profil">Profil</string>
    <string name="iesire">Ieșire</string>
    <string name="feedback_inregistrare">Înregistrați-vă în aplicație ca să puteți adăuga și părerea dumneavoastră!</string>
    <string name="meniu_lectii">Meniu lecții</string>
</resources>
