<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ProfesorAdauga">

    <EditText
        android:id="@+id/adauga_lectie"
        style="@style/EditText"
        android:layout_marginTop="10dp"
        android:hint="@string/introduceti_titlul" />

    <EditText
        android:id="@+id/adauga_teorie"
        style="@style/EditText_multiLines"
        android:hint="@string/scrie_teorie" />

    <EditText
        android:id="@+id/adauga_cerinta"
        style="@style/EditText_multiLines"
        android:hint="@string/cerinta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:text="@string/alege_poza" />

        <ImageButton
            android:id="@+id/adauga_poza"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/imagine_indisponibila" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirma_lectie"
            style="@style/Buton"
            android:layout_marginEnd="10dp"
            android:text="@string/adauga_lectia" />

        <Button
            android:id="@+id/goleste_lectie"
            style="@style/Buton"
            android:text="@string/goleste_campuri" />

    </LinearLayout>

</LinearLayout>