<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context=".ProfesorVerificare">

    <TextView
        style="@style/TextView"
        android:text="@string/bun_venit" />

    <TextView
        style="@style/TextView"
        android:layout_marginTop="10dp"
        android:text="@string/parola_primita" />

    <EditText
        android:id="@+id/introdu_parola"
        style="@style/EditText"
        android:layout_marginTop="10dp"
        android:hint="@string/parola"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/confirma_parola"
        style="@style/Buton"
        android:layout_marginTop="10dp"
        android:text="@string/confirma" />

</LinearLayout>