<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.android.stiumate.ProfilUtilizator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profil_email"
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/email_profil" />

            <TextView
                android:id="@+id/profil_nume"
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/nume_profil" />

            <TextView
                android:id="@+id/profil_scor"
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/scor_profil" />

        </LinearLayout>

        <ImageView
            android:id="@+id/profil_poza"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:background="@drawable/rama"
            android:contentDescription="@string/imagine_indisponibila"
            android:scaleType="fitXY" />
    </LinearLayout>

    <TextView
        style="@style/TextView"
        android:layout_marginTop="20dp"
        android:text="@string/lista_realizari" />

    <ListView
        android:id="@+id/profil_lista"
        style="@style/lista"
        android:layout_marginTop="10dp" />

</LinearLayout>
