<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.stiumate.ResetareParola">

    <EditText
        android:id="@+id/resetareParola_email"
        style="@style/EditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/resetareParola_reseteaza"
        style="@style/Buton"
        android:layout_marginTop="20dp"
        android:text="@string/resetareparola" />

    <Button
        android:id="@+id/resetareParola_inapoi"
        style="@style/Buton_text"
        android:layout_marginTop="50dp"
        android:text="@string/inapoilaAutentificare" />

</LinearLayout>
