<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.stiumate.Exerseaza">

    <TextView
        android:id="@+id/exerseaza_intrebare"
        style="@style/TextView"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/exerseaza_raspuns"
        style="@style/EditText"
        android:layout_below="@id/exerseaza_intrebare"
        android:layout_marginTop="30dp"
        android:hint="@string/introdu_raspuns" />

    <Button
        android:id="@+id/exerseaza_butonRaspuns"
        style="@style/Buton"
        android:layout_below="@id/exerseaza_raspuns"
        android:layout_marginTop="10dp"
        android:text="@string/confirma" />

    <TextView
        android:id="@+id/exerseaza_hint"
        style="@style/TextView"
        android:layout_below="@id/exerseaza_butonRaspuns"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/exerseaza_greseli"
        style="@style/TextView"
        android:layout_below="@id/exerseaza_hint"
        android:layout_marginTop="30dp"
         />

    <Button
        android:id="@+id/exerseaza_urmatoareIntrebare"
        style="@style/Buton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/urmatoarea" />

</RelativeLayout>
