<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.stiumate.AfisareScor">

    <TextView
        android:id="@+id/afisare_scor_text"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/scorul_dvs" />

    <TextView
        android:id="@+id/afisare_scor_medalii"
        style="@style/TextView"
        android:layout_below="@id/afisare_scor_text"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/afisare_scor_nelogat"
        style="@style/TextView"
        android:layout_below="@id/afisare_scor_medalii"
        android:layout_marginTop="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/afisare_scor_inapoiLaLectii"
            style="@style/Buton"
            android:layout_marginEnd="10dp"
            android:text="@string/inapoi_lectii" />

        <Button
            android:id="@+id/pag_principala"
            style="@style/Buton"
            android:text="@string/revenire_pag_principala" />

    </LinearLayout>

</RelativeLayout>
